<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragments.Pass_Fragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        android:background="@drawable/rectangle"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FF5D5D"
        android:layout_margin="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/photo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"

                    android:src="@drawable/avatar4" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >

                    <TextView
                        android:id="@+id/name"
                        android:fontFamily="@font/montserrat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/address"
                        android:fontFamily="@font/montserrat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/floor"
                        android:textColor="@color/white"
                        android:textSize="15dp" />
                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:src="@drawable/info" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="Robin"
                android:textStyle="italic"
               android:layout_marginTop="90dp"
                android:textColor="@color/white"
                android:textSize="35dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    
   <com.google.android.material.textview.MaterialTextView
       android:layout_width="wrap_content"
       android:layout_marginTop="15dp"
       android:layout_height="wrap_content"
       android:textStyle="italic"
       android:layout_marginLeft="30dp"
       android:textColor="#858383"

       android:text="@string/today_11_june"
       android:fontFamily="@font/montserrat"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        android:elevation="10dp"
        android:layout_margin="20dp"
        android:background="@drawable/rectangle"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quarter"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="5dp"
                android:text="Meeting in 11 min at 11:00 am"
                android:fontFamily="@font/montserrat"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/building"
                    />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/attendees"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView

                android:layout_marginLeft="10dp"
                android:id="@+id/photo_rv1"
                android:layout_marginTop="12dp"
                android:scrollbars="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

<Button
    android:layout_marginTop="20dp"
    android:id="@+id/btn"

    android:layout_width="150dp"
    android:layout_height="45dp"
    android:layout_marginLeft="20dp"
    android:textColorLink="@color/black"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp"
    android:background="@drawable/rectangle"
    android:layout_margin="10dp"
    android:text="@string/space"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/_3_more_evens_later"
            android:textColor="#858383"
            android:textStyle="italic" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:layout_marginLeft="7dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        android:textColor="#858383"
        android:text="@string/plan_ahead"
        android:fontFamily="@font/montserrat"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="#FFFFFF"
        android:elevation="10dp"

        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desk"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginLeft="10dp"/>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/people"
                    android:layout_marginLeft="3dp"
                    />
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/teammates"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginLeft="10dp"
                android:id="@+id/photo_rv2"
                android:layout_marginTop="12dp"
                android:scrollbars="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>