<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Activity.PassDetails">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/cancel"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/cancel"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passd"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="100dp"/>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:elevation="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            android:background="@drawable/rectangle"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FF5D5D"
            android:layout_margin="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/photo"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"

                        android:src="@drawable/avatar4" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"

                        >

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/name_nora"
                            android:textColor="@color/white"
                            android:textSize="15dp" />


                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="90dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/name_robin"
                    android:textColor="@color/white"
                    android:textSize="35dp"
                    android:textStyle="italic" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_marginLeft="30dp"
            android:textColor="#858383"

            android:text="Notes"
            android:fontFamily="@font/montserrat"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:elevation="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            android:background="@drawable/rectangle"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FFFFFF"
            android:layout_margin="10dp"
            >
            <TextView

                android:layout_margin="10dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pass_details"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_marginLeft="30dp"
            android:textColor="#858383"

            android:text="Offices"
            android:fontFamily="@font/montserrat"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:elevation="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            android:background="@drawable/rectangle"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FFFFFF"
            android:layout_margin="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/black"
                    android:text="Location"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textColor="#858383"
                    android:text="Loading"
                    android:layout_marginLeft="140dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/black"
                    android:text="Work Area"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:id="@+id/workarea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textColor="#858383"
                    android:text="Sales and marketing"
                    android:layout_marginLeft="130dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/black"
                    android:text="Desk"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/viewonmap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="170dp"
                    android:fontFamily="@font/montserrat"
                    android:text="View on Map ->"
                    android:textColor="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/black"
                    android:text="Schedule"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/schedule"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="120dp"
                    android:fontFamily="@font/montserrat"
                    android:text="Mon,Tue,Thu,Fri"
                    android:textColor="@color/black" />
                <ImageButton
                    android:id="@+id/dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:src="@drawable/dropdown"/>

            </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_marginLeft="30dp"
            android:textColor="#858383"

            android:text="Permissions"
            android:fontFamily="@font/montserrat"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:elevation="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            android:background="@drawable/rectangle"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FFFFFF"
            android:layout_margin="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/black"
                        android:text="Desk booking"
                        android:layout_marginLeft="10dp"/>
                    <TextView
                        android:id="@+id/desk_booking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:textColor="#7A7979"
                        android:text="Desk booking"
                        android:layout_marginLeft="130dp"/>
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>